berhasil mantap dkitlah

--- a/style.css
+++ b/style.css
@@ -5,12 +5,57 @@ body {
 	background-image: url(picture/2.png);
 }
 
+.top-bar {
+	position: fixed;
+	height: 44px;
+	top: 0;
+	left: 0;
+	right: 0;
+	background-image: url(picture/1.png);
+	border-right: 1px solid black;
+	border-left: 1px solid black;
+	border-bottom:4px solid  salmon;
+	z-index: 9999;
+}
+
+.top-bar a:hover{
+	background-color: aqua;
+	color: white;
+}
+
+.top-bar a{
+	text-decoration: none;
+}
+
+.top-bar ul li {
+	display: inline-block;
+	margin-right: 4px;
+	margin-top: 15px;
+	margin-left: 20px;
+}
+
 .container {
+	position: relative;
 	width: 960px;
-	margin: auto;
+	margin: 80px auto;
 	background-color: gainsboro;
 	border: 2px solid black;
 }
+
+/*	yt	*/
+
+.yt {
+	display: inline-block;
+	background-image: url(picture/yt.png);
+	width: 275px;
+	height: 88px;
+	text-decoration: none;
+	position: absolute;
+	top: -25px;
+	right: 0px;
+}
+
+/*	Body */
 
 .header {
 	margin: 5px;
@@ -65,6 +110,8 @@ body {
 	box-sizing: border-box;
 }
 
+/* Micro clear */
+
 .cf:before,
 .cf:after {
     content: " "; /* 1 */
@@ -78,6 +125,8 @@ body {
 .cf {
     *zoom: 1;
 }
+
+/*	Sidebar	*/
 
 .sidebar{
 	width: 300px;
@@ -96,6 +145,8 @@ body {
 	margin-right: 8px;
 	margin-top: 3px;
 }
+
+/*	footer	*/
 
 .footer {
 	background-color: rgb(34, 31, 31);
